--- a/style.css
+++ b/style.css
@@ -101,8 +101,14 @@ aside h1 {
     color: #D32F2F !important;
 }
 
-.erroritem label {
-    margin-bottom: -20px;
+.items .disabled {
+    background: #F2F2F2;
+    border: 1px solid #E0E0E0;
+    cursor: not-allowed;
+}
+
+.items .disabled:focus, .items .disabled:hover {
+    border: 1px solid #E0E0E0 !important;
 }
 
 .items .sm {
